--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,7 @@ AllCops:
     - bin/**/*
     - node_modules/**/*
     - spec/*_helper.rb
+    - vendor/**/*
     - Gemfile
 Documentation:
   Enabled: false
