Fix style and reduce user_id token code

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,5 +14,9 @@ Documentation:
   Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
+Metrics/AbcSize:
+  Max: 25
 Metrics/LineLength:
   Max: 120
+MethodLength:
+  Max: 30
