--- a/config/database-gitlab.yml
+++ b/config/database-gitlab.yml
@@ -8,8 +8,7 @@ default: &default
 development:
   <<: *default
   database: cowhub-server-api_development
-  username: cowhub-server-api
-  password: sitdownwhenitsraining
+  username: ubuntu
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
