--- a/config/database.yml
+++ b/config/database.yml
@@ -2,27 +2,15 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: localhost
+  host: <%= ENV.fetch("POSTGRES_HOST") { "localhost" } %>
   timeout: 5000
+  username: <%= ENV.fetch("POSTGRES_USER") { "cowhub-server-api" } %>
+  password: <%= ENV.fetch("POSTGRES_PASSWORD") { "sitdownwhenitsraining" } %>
 
 development:
   <<: *default
   database: cowhub-server-api_development
-  username: cowhub-server-api
-  password: sitdownwhenitsraining
 
-  # Connect on a TCP socket. Omitted by default since the client uses a
-  # domain socket that doesn't need configuration. Windows does not have
-  # domain sockets, so uncomment these lines.
-  #host: localhost
-
-  # The TCP port the server listens on. Defaults to 5432.
-  # If your server runs on a different port number, change accordingly.
-  #port: 5432
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
   database: cowhub-server-api_test
