--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,6 @@ rspec:
     - bundle exec rspec
 
 deploy:
+  only: feature/docker_deploy
   script:
     - docker build -t cowhub-server-api .
-    - docker push cowhub-server-api 146.169.46.47:5000/cowhub-server-api
