--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,22 +14,25 @@ cache:
     - vendor/ruby
 
 before_script:
+  image: "ruby:2.3.1"
   - ruby -v
-  - docker info
   - gem install bundler --no-ri --no-rdoc
   - bundle install -j $(nproc) --path vendor
 
 rubocop:
+  image: "ruby:2.3.1"
   script:
     - bundle exec rubocop
 
 rspec:
+  image: "ruby:2.3.1"
   script:
     - bundle exec rake db:setup db:migrate
     - bundle exec rspec
 
 deploy:
-  only: 
+  image: "docker:latest"
+  only:
     - feature/docker_deploy
   script:
     - docker build -t cowhub-server-api .
