--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,28 +17,25 @@ stages:
   - test
   - deploy
 
+before_script:
+  - ruby -v
+  - gem install bundler --no-ri --no-rdoc
+  - bundle install -j $(nproc) --path vendor
+
 rubocop:
   stage: test
   script:
-    - ruby -v
-    - gem install bundler --no-ri --no-rdoc
-    - bundle install -j $(nproc) --path vendor
     - bundle exec rubocop
 
 rspec:
   stage: test
   script:
-    - ruby -v
-    - gem install bundler --no-ri --no-rdoc
-    - bundle install -j $(nproc) --path vendor
     - bundle exec rake db:setup db:migrate
     - bundle exec rspec
 
 deploy:
   stage: deploy
-  image: docker:latest
   only:
     - feature/docker_deploy
   script:
-    - docker build -t cowhub-server-api .
     - ./deploy.sh
