--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,10 +18,11 @@ stages:
   - deploy
 
 before_script:
+  - uname -a
   - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+  - 'which rsync || ( apt-get update -y && apt-get install -y rsync )'
   - eval $(ssh-agent -s)
   - ssh-add <(echo "$GITLAB_DEPLOY_KEY")
-  - apt-get install -y rsync
   - ruby -v
   - gem install bundler --no-ri --no-rdoc
   - bundle install -j $(nproc) --path vendor
