--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ before_script:
   - ruby -v
   - gem install bundler --no-ri --no-rdoc
   - bundle install -j $(nproc) --path vendor
+  - alias ssh="ssh -o StrictHostKeyChecking=no"
 
 rubocop:
   stage: test
