Add delete and exclude with sync

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,5 +44,5 @@ deploy:
   only:
     - feature/docker_deploy
   script:
-    - rsync -avz . -e ssh root@cloud-vm-46-166.doc.ic.ac.uk:/app
+    - rsync -avz . -e ssh root@cloud-vm-46-166.doc.ic.ac.uk:/app --delete --exclude ".git"
     - ssh root@cloud-vm-46-166.doc.ic.ac.uk "/bin/bash -c /deploy.sh"
