--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,5 +43,5 @@ deploy:
   only:
     - feature/docker_deploy
   script:
-    - rsync --stats --progress -avz . -e ssh root@cloud-vm-46-166.doc.ic.ac.uk:/app --delete --exclude ".git"
+    - rsync --stats --progress -avz . -e "ssh -o StrictHostChecking=no" root@cloud-vm-46-166.doc.ic.ac.uk:/app --delete --exclude ".git"
     - ssh root@cloud-vm-46-166.doc.ic.ac.uk "/bin/bash -c /deploy.sh"
