Fix deployment script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,4 +44,4 @@ deploy:
     - feature/docker_deploy
   script:
     - rsync --stats --progress -avz . -e "ssh -o StrictHostKeyChecking=no" root@cloud-vm-46-166.doc.ic.ac.uk:/app --delete --exclude ".git"
-    - ssh root@cloud-vm-46-166.doc.ic.ac.uk "/bin/bash -c /deploy.sh"
+    - ssh root@cloud-vm-46-166.doc.ic.ac.uk "/bin/bash -c /app/deploy.sh"
