--- a/config/database.yml
+++ b/config/database.yml
@@ -18,3 +18,4 @@ test:
 production:
   <<: *default
   database: cowhub-server-api_production
+  password: "D8kKTVZBz/b8jxj32lTw8cvJaQ0FGrfytPc+rXh08PY="
