Change herdmark to string and add validations

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ default: &default
   pool: 5
   timeout: 5000
   username: <%= ENV.fetch("POSTGRES_USER") { 'postgres' } %>
-  password: <%= ENV.fetch("POSTGRES_PASSWORD") {  } %>
+  password: <%= ENV.fetch("POSTGRES_PASSWORD") { '' } %>
   host: <%= ENV.fetch("POSTGRES_HOST") { 'db' } %>
 
 development:
