--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "cowhub-server-api",
   "version": "0.0.1",
   "scripts": {
-    "db_setup": "env RAILS_ENV=development bundle exec rake db:setup db:migrate",
-    "db_setup_test": "env RAILS_ENV=test bundle exec rake db:setup db:migrate",
-    "rspec": "npm run db_setup_test; env RAILS_ENV=test bundle exec rspec",
-    "rubocop": "env RAILS_ENV=test bundle exec rubocop",
-    "server": "env RAILS_ENV=development bundle exec rails s",
-    "test": "npm run rubocop; npm run rspec"
+    "db_migrate": "bundle exec rake db:migrate",
+    "rspec": "npm run db_migrate; bundle exec rspec",
+    "rubocop": "bundle exec rubocop",
+    "test": "npm run rubocop -s; npm run rspec -s"
   }
 }
