Comment out docker-compose

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ stages:
 
 before_script:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
-  - docker-compose build
-  - docker-compose run web bundle exec rake db:create
+  # - docker-compose build
+  # - docker-compose run web bundle exec rake db:create
 
 rubocop:
   stage: test
