--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
-image: "docker:latest"
+image: jonaskello/docker-and-compose:1.12.1-1.8.0
 
 services:
-  - docker:dind
+  - docker:1.12.1-dind
 
 stages:
   - test
