--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,15 +3,22 @@ image: jonaskello/docker-and-compose:1.12.1-1.8.0
 services:
   - docker:1.12.1-dind
 
+variables:
+  RAILS_ENV: test
+  POSTGRES_HOST: postgres
+  POSTGRES_USER: cowhub-server-api
+  POSTGRES_PASSWORD: sitdownwhenitsraining
+
 stages:
   - test
+  - release
+  - deploy
 
 before_script:
-  - docker login -u $DOCKER_USER -p $DOCKER_PASS
-  - mount | grep /etc/hosts
-  - ls /dev/dm-0
-  # - docker-compose build
-  # - docker-compose run web bundle exec rake db:create
+  - docker-compose build
+  - docker-compose run web bundle exec rake db:create
+
+
 
 rubocop:
   stage: test
@@ -23,8 +30,9 @@ rspec:
   script:
     - docker info
 
-variables:
-  RAILS_ENV: test
-  POSTGRES_HOST: postgres
-  POSTGRES_USER: cowhub-server-api
-  POSTGRES_PASSWORD: sitdownwhenitsraining
+
+
+release:
+  stage: release
+  script:
+    - docker login -u $DOCKER_USER -p $DOCKER_PASS
