Yeh, decided not to

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ stages:
   - deploy
 
 before_script:
-  - docker-compose build --pull
+  - docker-compose build
   - docker-compose run web bundle exec rake db:create
 
 
