--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ rspec:
 
 
 release:
-  image: "docker:latest"
+  image: "gitlab/dind:latest"
   stage: release
   script:
     - docker login -u $DOCKER_USER -p $DOCKER_PASS
