--- a/config/database.yml
+++ b/config/database.yml
@@ -3,9 +3,9 @@ default: &default
   encoding: unicode
   pool: 5
   timeout: 5000
-  username: <%= ENV.fetch("POSTGRES_USER") { 'postgres' } %>
-  password: <%= ENV.fetch("POSTGRES_PASSWORD") { '' } %>
-  host: <%= ENV.fetch("POSTGRES_HOST") { 'db' } %>
+  username: cowhub-server-api
+  password: sitdownwhenitsraining
+  host: localhost
 
 development:
   <<: *default
@@ -18,3 +18,6 @@ test:
 production:
   <<: *default
   database: cowhub-server-api_production
+  username: <%= ENV.fetch("POSTGRES_USER") { 'postgres' } %>
+  password: <%= ENV.fetch("POSTGRES_PASSWORD") { '' } %>
+  host: <%= ENV.fetch("POSTGRES_HOST") { 'db' } %>
