Added run dev back in

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "db_migrate": "bundle exec rake db:migrate",
+    "dev": "bundle exec rails s",
     "rspec": "npm run db_migrate; bundle exec rspec",
     "rubocop": "bundle exec rubocop",
     "test": "npm run rubocop -s; npm run rspec -s" 
