--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -4,4 +4,9 @@ services:
   api:
     image: cowhub/cowhub-server-api
     environment:
-      
+      - RAILS_ENV=production
+      - POSTGRES_USER=cowhub-server-api
+      - POSTGRES_PASSWORD=sitdownwhenitsraining
+      - POSTGRES_HOST=146.169.46.196
+    ports:
+      - "80:8080"
