--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: "ruby:2.3.1"
 
 variables:
+  RAILS_ENV: test
   POSTGRES_HOST: postgres
   POSTGRES_USER: cowhub-server-api
   POSTGRES_PASSWORD: sitdownwhenitsraining
@@ -16,7 +17,7 @@ stages:
   - test
   - release
   - deploy
- 
+
 
 rubocop:
   stage: test
@@ -41,8 +42,9 @@ release:
     - master
   script:
     - docker login -u $DOCKER_USER -p $DOCKER_PASS
-    - docker build -t cowhub/cowhub-server-api:latest .
+    - docker build -t cowhub/cowhub-server-api:latest -f Dockerfile.production .
     - docker push cowhub/cowhub-server-api
+
 
 deploy:
   stage: deploy
@@ -54,5 +56,5 @@ deploy:
     - eval $(ssh-agent -s)
     - ssh-add <(echo "$GITLAB_DEPLOY_KEY")
     - rm -rf .ssh/known_hosts
-    - rsync --stats --progress -avz . -e "ssh -o StrictHostKeyChecking=no" root@cloud-vm-46-166.doc.ic.ac.uk:/app --delete --exclude ".git"
-    - ssh root@cloud-vm-46-166.doc.ic.ac.uk "/bin/bash -c /app/deploy.sh"
+    - rsync -avz {deploy.sh,docker-compose-production.yml} -e "ssh -o StrictHostKeyChecking=no" root@cloud-vm-46-166.doc.ic.ac.uk:/
+    - ssh root@cloud-vm-46-166.doc.ic.ac.uk "/bin/bash -c /deploy.sh"
