--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,5 +57,5 @@ deploy:
     - ssh-add <(echo "$GITLAB_DEPLOY_KEY")
     - rm -rf .ssh/known_hosts
     - rsync -avz {deploy.sh,docker-compose-production.yml} -e "ssh -o StrictHostKeyChecking=no" root@cloud-vm-46-166.doc.ic.ac.uk:/
-    - echo "RUNNING: docker login -u \"$DOCKER_USER\" -p \"$DOCKER_PASS\" && /bin/bash -c /deploy.sh"
+    - echo "RUNNING docker login -u \"$DOCKER_USER\" -p \"$DOCKER_PASS\" && /bin/bash -c /deploy.sh"
     - ssh root@cloud-vm-46-166.doc.ic.ac.uk "docker login -u \"$DOCKER_USER\" -p \"$DOCKER_PASS\" && /bin/bash -c /deploy.sh"
