--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,42 +14,42 @@ cache:
     - vendor/ruby
 
 stages:
-  # - test
-  # - release
+  - test
+  - release
   - deploy
 
 
-# rubocop:
-#   stage: test
-#   script:
-#     - gem install bundler --no-ri --no-rdoc
-#     - bundle install -j $(nproc) --path vendor
-#     - bundle exec rubocop
-#
-# rspec:
-#   stage: test
-#   script:
-#     - gem install bundler --no-ri --no-rdoc
-#     - bundle install -j $(nproc) --path vendor
-#     - bundle exec rake db:setup db:migrate
-#     - bundle exec rspec
-#
-#
-# release:
-#   image: "gitlab/dind:latest"
-#   stage: release
-#   only:
-#     - master
-#   script:
-#     - docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
-#     - docker build -t cowhub/cowhub-server-api:latest -f Dockerfile.production .
-#     - docker push cowhub/cowhub-server-api
+rubocop:
+  stage: test
+  script:
+    - gem install bundler --no-ri --no-rdoc
+    - bundle install -j $(nproc) --path vendor
+    - bundle exec rubocop
+
+rspec:
+  stage: test
+  script:
+    - gem install bundler --no-ri --no-rdoc
+    - bundle install -j $(nproc) --path vendor
+    - bundle exec rake db:setup db:migrate
+    - bundle exec rspec
+
+
+release:
+  image: "gitlab/dind:latest"
+  stage: release
+  only:
+    - master
+  script:
+    - docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
+    - docker build -t cowhub/cowhub-server-api:latest -f Dockerfile.production .
+    - docker push cowhub/cowhub-server-api
 
 
 deploy:
   stage: deploy
-  # only:
-  #   - master
+  only:
+    - master
   script:
     - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
     - 'which rsync || ( apt-get update -y && apt-get install -y rsync )'
