--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cowhub-server-api",
   "version": "0.0.1",
   "scripts": {
+    "db_setup": "bundle exec rake db:setup",
     "db_migrate": "bundle exec rake db:migrate",
     "start": "bundle exec rails server -b 0.0.0.0 -p 8080",
     "rspec": "npm run db_migrate; bundle exec rspec",
