Add rabbit host

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ variables:
   POSTGRES_HOST: postgres
   POSTGRES_USER: cowhub-server-api
   POSTGRES_PASSWORD: sitdownwhenitsraining
+  RABBIT_HOST: rabbitmq
 
 services:
   - postgres:latest
