--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@
 # Ignore npm
 node_modules/
 npm-debug.log
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
