Add aws cli to circle

--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,10 @@ machine:
     - rabbitmq-server
     - redis
 
+dependencies:
+  post:
+    - pip install awsebcli
+
 test:
   override:
     - npm test
