--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,8 @@
 machine:
   environment:
+    # Setting the tag for Docker-hub
+    TAG: $CIRCLE_BRANCH-$CIRCLE_SHA1
+    DOCKER_IMAGE: CowHub/cowhub-server-api:$CIRCLE_BRANCH-$CIRCLE_SHA1
     RAILS_ENV: test
     POSTGRES_HOST: postgres
     POSTGRES_USER: cowhub-server-api
@@ -16,3 +19,23 @@ dependencies:
 test:
   override:
     - npm test
+
+deployment:
+  production:
+    branch: master
+    commands:
+      - |
+        cat > ~/.dockercfg << EOF
+        {
+            "https://index.docker.io/v1/": {
+                "auth": "$DOCKER_AUTH",
+                "email": "$DOCKER_EMAIL"
+            }
+        }
+        EOF
+      - docker build --rm=false -t $DOCKER_IMAGE -f Dockerfile.production .
+      - docker push $DOCKER_IMAGE
+      # Calling script for uploading JSON descriptor file
+      - sh ./create_docker_run_file.sh $TAG
+      # Calling script for setting new application version in AWS EB
+      - sh ./upload_image_to_elasticbeanstalk.sh $TAG
