--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     command: /bin/bash -c "npm run db_setup && npm start"
     environment:
       - RAILS_ENV=development
-      - DIFF_TRESHOLD=100000
+      - DIFF_THRESHOLD=100000
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=
       - POSTGRES_HOST=db
