--- a/config/database.yml
+++ b/config/database.yml
@@ -17,4 +17,9 @@ test:
 
 production:
   <<: *default
-  database: cowhub-server-api_production
+  encoding: utf8
+  database: <%= ENV['RDS_DB_NAME'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOSTNAME'] %>
+  port: <%= ENV['RDS_PORT'] %>
