--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "db_setup": "bundle exec rake db:setup",
     "db_migrate": "bundle exec rake db:migrate",
-    "start": "bundle exec rails server -b 0.0.0.0 -p 8080",
-    "production": "bundle exec rails server -b 0.0.0.0 -p 80",
+    "start": "bundle exec rails server -b 0.0.0.0 -p 80",
+    "dev": "bundle exec rails server -b 0.0.0.0 -p 8080",
     "rspec": "npm run db_migrate; bundle exec rspec",
     "rubocop": "bundle exec rubocop",
     "test": "npm run rubocop -s; npm run rspec -s"
