--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres
   api:
     build: .
-    command: /bin/bash -c "npm run db_setup && npm start"
+    command: /bin/bash -c "bundle exec rake db:setup && rails s -p 8080"
     environment:
       - RAILS_ENV=development
       - POSTGRES_USER=postgres
