Implement s3 upload for images

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,10 +15,13 @@ Documentation:
 Style/FrozenStringLiteralComment:
   Enabled: false
 Metrics/AbcSize:
-  Max: 25
+  Max: 30
 Metrics/LineLength:
   Max: 120
 MethodLength:
   Max: 30
 BlockLength:
   Max: 200
+Style/GlobalVars:
+  AllowedVariables:
+    - $s3
