Used npm scripts instead of directly using bundle exec ...

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "cowhub-server-api",
   "version": "0.0.1",
   "scripts": {
+    "start": "bundle exec rails server -b 0.0.0.0 -p 8080",
+    "production": "bundle exec rails server -b 0.0.0.0 -p 80",
     "db_setup": "bundle exec rake db:setup",
     "db_migrate": "bundle exec rake db:migrate",
     "rspec": "npm run db_migrate; bundle exec rspec",
