--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "db_setup": "bundle exec rake db:setup",
     "db_migrate": "bundle exec rake db:migrate",
-    "rspec": "npm run db_migrate; bundle exec rspec",
+    "rspec": "yarn run db_migrate; bundle exec rspec",
     "rubocop": "bundle exec rubocop",
-    "test": "npm run rubocop -s; npm run rspec -s"
+    "test": "yarn run rubocop -s; yarn run rspec -s"
   }
 }
