--- a/circle.yml
+++ b/circle.yml
@@ -19,18 +19,9 @@ database:
     - mv config/database.yml config/database.yml.backup
 
 dependencies:
-  override:
-    - wget https://yarnpkg.com/install.sh
-    - chmod +x install.sh
-    - ./install.sh
-    - gem install bundler
-    - bundle install
+  post:
     - mkdir -p s3 && docker run -itd -v $(pwd)/s3:/fakes3_root -p 4569:4569 lphoward/fake-s3
     - pip install awsebcli
-
-test:
-  override:
-    - yarn test
 
 deployment:
   production:
