--- a/circle.yml
+++ b/circle.yml
@@ -23,6 +23,10 @@ dependencies:
     - mkdir -p s3 && docker run -itd -v $(pwd)/s3:/fakes3_root -p 4569:4569 lphoward/fake-s3
     - pip install awsebcli
 
+test:
+  override:
+    - rake test
+
 deployment:
   production:
     branch: master
