Fixed circle ci bug and test

--- a/circle.yml
+++ b/circle.yml
@@ -25,7 +25,8 @@ dependencies:
 
 test:
   override:
-    - bundle exec rake test
+    - bundle exec rspec
+    - bundle exec rubocop
 
 deployment:
   production:
