--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -10,5 +10,6 @@ RUN bundle install
 
 COPY . .
 
+ENV RAILS_PORT 80
 EXPOSE 80
-CMD [ "/bin/bash", "-c", "bundle exec rake db:migrate && bundle exec rails server -b 0.0.0.0 -p 80" ]
+CMD [ "/bin/bash", "-c", "/app/deploy.sh" ]
