--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,8 @@ AllCops:
     - Gemfile
 Documentation:
   Enabled: false
+Style/RedundantBegin:
+  Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
 Metrics/AbcSize:
